<resources>
    <string name="app_name">مشاوره حقوقی همراه</string>
    <string name="home">اصلی</string>
    <string name="what_hoqugi">آیا میدانید های حقوقی</string>
    <string name="aya_hoqugi">آیا میدانید !!</string>
    <string name="family">خانواده</string>
    <string name="how_work">نحوه کار</string>
    <string name="mohajerat">مهاجرت</string>
    <string name="maliati">مالیاتی</string>
    <string name="vorud">ورود</string>
    <string name="sabtnam">ثبت نام</string>
    <string name="nologin"> قبلا ثبت نام نکرده ام !!! </string>
    <string name="login"> قبلا ثبت نام کرده ام !!! </string>
    <string name="moarefi">معرفی به دوستان</string>
    <string name="title_qanomAsasi">قانون اساسی جمهوری اسلامی ایران</string>
    <string name="matn_qanonasasi">
قانون اساسی جمهوری اسلامی ایران در سال ۱۳۵۸ توسط مجلس خبرگان قانون اساسی در ۱۷۷ اصل تصویب شده\n
        و همان سال به همه‌پرسی گذاشته شد و نتیجه آن با رأی مثبت اعلام شد.\n
        در سال ۱۳۶۸ پس از حکم سید روح‌الله موسوی خمینی به سید علی خامنه‌ای رئیس‌جمهور وقت،
        اصلاحاتی در این قانون صورت پذیرفت و سمت نخست‌وزیری در سمت ریاست جمهور ادغام شد و سمت جدید پدیدآمده را ریاست جمهور نامیدند.\n
        این اصلاحات سه ماه پس از درگذشت آیت الله خمینی در همه‌پرسی‌ای به تصویب رسید.\n
    </string>
    <string name="title_tarikhche">تاریخچه</string>
    <string name="matn_tarikhche">
        در زمستان ۱۳۵۷ و قبل از پیروزی انقلاب اسلامی، ایدهٔ تدوین قانون اساسی توسط روح‌الله خمینی و یارانش در پاریس مطرح شد.\n
        در همان‌جا پیش‌نویس اولیه قانون اساسی تهیه شد.\n
        بعدها پس از پیروزی انقلاب، این پیش‌نویس توسط افراد و گروه‌های مختلف مورد نقد و بررسی قرار گرفت. در ۱۵ بهمن ۵۷، روح‌الله خمینی از جمله وظایف دولت موقت مهدی بازرگان را تشکیل مجلس مؤسسان منتخب مردم برای نگارش قانون اساسی اعلام کرد.\n
        پس از شروع کار دولت بازرگان، شورای عالی طرح‌های انقلاب با تصویب هیئت دولت در ۸ فروردین ۵۸ تأسیس و از وظایف این شورا، تهیه طرح قانون اساسی بر مبنای ضوابط اسلامی و اصول آزادی عنوان شد.\n
        در ۱۲ مرداد ۱۳۵۸ انتخابات مجلس خبرگان قانون اساسی برگزار و اعضای منتخب از ۲۸ مرداد شروع به تدوین قانون اساسی کردند. در ۲۴ آبان ۵۸ کار تدوین به پایان رسید و دو روز بعد (۲۶ آبان ۵۸)در روزنامه کیهان به چاپ رسید.\n
        همه‌پرسی قانون اساسی در ۱۱ و ۱۲ آذر برگزار شد و با رأی قریب به اتفاق (۹۸/۲درصد) ملت به تصویب نهایی رسید.\n
    </string>
    <string name="title_qaza_dar_qanon">قضا در قانون اساسی</string>
    <string name="matn_qaza_dar_qanon">
        مساله قضا در رابطه با پاسداری از حقوق مردم در خط حرکت اسلامی، به منظور پیشگیری
        از انحرافات موضعی در درون امت اسلامی امری است حیاتی ، از این رو ایجاد سیستم
        قضایی بر پایه عدل اسلامی و متشکل از قضات عادل و آشنا به ضوابط دقیق دینی
        پیش‌بینی شده است؛\n این نظام به دلیل حساسیت بنیادی و دقت در مکتبی بودن آن لازم
        است به دور از هر نوع رابطه و مناسبات ناسالم باشد.\n
        (و اذا حکمتم بین‌الناس انتحکموا بالعدل).
    </string>
    <string name="title_qove_mojrie">قوه مجریه</string>
    <string name="matn_qove_mojrie">
        قوه مجریه به دلیل اهمیت ویژه‌ای که در رابطه با اجرای احکام و مقررات اسلامی به
        منظور رسیدن به روابط و مناسبات عادلانه حاکم بر جامعه دارد و همچنین ضرورتی که
        این مساله حیاتی در زمینه سازی وصول به هدف نهایی حیات خواهد داشت بایستی راهگشای
        ایجاد جامعه اسلامی باشد.\n
        نتیجتاً محصور شدن در هر نوع نظام دست و پا گیر پیچیده که
        وصول به این هدف را کُند و یا خدشه‌دار کند از دیدگاه اسلامی نفی خواهد شد.\n
        بدین
        جهت نظام بوروکراسی که زائیده و حاصل حاکمیت‌های طاغوتی است به شدت طرد خواهد شد
        تا نظام اجرایی با کارایی بیشتر و سرعت افزون‌تر در اجرای تعهدات اداری به وجود
        آید.
    </string>
    <string name="title_namayandegan">نمایندگان</string>
    <string name="matn_namayandegan">
        مجلس خبرگان متشکل از نمایندگان مردم، کار تدوین قانون اساسی را بر اساس بررسی
        پیش‌نویس پیشنهادی دولت و کلیه پیشنهادهایی که از گروه‌های مختلف مردم رسیده بود
        در دوازده فصل که مشتمل بر یکصد و هفتاد و پنج اصل می‌باشد\n در طلیعه پانزدهمین قرن
        هجرت پیغمبر اکرم صلی‌الله علیه و آله و سلم، بنیانگذار مکتب رهایی بخش اسلام با
        اهداف و انگیزه‌های مشروح فوق به پایان رساند، \nبه این امید که این قرن، قرن حکومت
        جهانی مستضعفین و شکست تمامی مستکبرین گردد ‎ ‎
    </string>
    <string name="khanevade1">
        بر اساس قوانین و مقررات ایران، اصل بر این است که تمامی دعاوی حقوقی در دادگاه‌های عمومی دادگستری اقامه شوند. در این میان اما برخی دادگاه‌ها، مثل دادگاه خانواده، به شکل تخصصی تشکیل شده و با ساختار و قضات متفاوت از سایر داداگاه‌ها، به پرونده‌های خاصی رسیدگی می‌کنند. موارد صلاحیت دادگاه خانواده به موجب قانون حمایت خانواده مشخص و معین شده‌اند. در ادامه مطلب با اما باشید تا 18 مورد از صلاحیت‌های دادگاه خانواده را بررسی کنیم:\n
    </string>
    <string name="khanevade2">
        صلاحیت های دادگاه خانواده
    </string>
    <string name="khanevade3">
        ۱- نامزدی و خسارات ناشی از برهم زدن آن\n
        ۲- نکاح دائم، موقت و اذن در نکاح\n
        ۳- شروط ضمن عقد نکاح\n
        ۴- ازدواج مجدد\n
        ۵- جهیزیه\n
        ۶- مهریه\n
        ۷- نفقه زوجه و اجرت المثل ایام زوجیت\n
        ۸- تمکین و نشوز\n
        ۹- طلاق، رجوع، فسخ و انفساخ نکاح، بذل مدت و انقضای آن\n
        ۱۰- حضانت و ملاقات طفل\n
        ۱۱- نسب\n
        ۱۲- رشد، حجر و رفع آن\n
        ۱۳- ولایت قهری، قیمومت، امور مربوط به ناظر و امین اموال محجوران و وصایت در امور مربوط به آنان\n
        ۱۴- نفقه اقارب\n
        ۱۵- امور راجع به غایب مفقود الاثر\n
        ۱۶- سرپرستی کودکان بی سرپرست\n
        ۱۷- اهدای جنین\n
        ۱۸- تغییر جنسیت\n
    </string>
    <string name="khanevade4">
        لزوم تشکیل دادگاه خانواده
    </string>
    <string name="khanevade5">
        به موجب قانون حمایت خانواده مصوب ۱۳۹۱ قوه قضاییه مکلف شد در هر حوزه قضایی به تعداد کافی شعبه دادگاه خانواده تشکیل دهد.\n
        اما در شهر های بسیار کوچک که دادگاه خانواده تشکیل نشده است، دادگاه مستقر در آن حوزه به امور مربوط به دعاوی خانوده با تشریفات مندرج در همان قانون رسیدگی می کند.\n
        اما در همین مناطق نیر مردم مکلف هستند در خصوص پرونده های اصل نکاح و انحلال آن، به نزدیک ترین دادگاه خانواده ارجاع می شود.\n
    </string>
    <string name="khanevade6">
        تشریفات رسیدگی در دادگاه‌ خانواده
    </string>
    <string name="khanevade7">
        شروع رسیدگی به دعاوی و ادامه یافتن آن در این دادگاه خانواده با تقدیم دادخواست می‌باشد، ولی تابع تشریفات آیین دادرسی مدنی نمی‌باشد.\n
        تشریفات و نحوه ابلاغ در این دادگاه‌ها مطابق قواعد عام آیین دادرسی مدنی است.\n
        در دعاوی که در صلاحیت این دادگاه قرار دارد، زوجه می تواند در دادگاه خانواده محل اقامت خوانده و یا محل اقامت خود طرح دعوا نماید.\n
    </string>
    <string name="khanevade8">
        حضور قاضی زن در دادگاه خانواده
    </string>
    <string name="khanevade9">
        به منظور رسیدگی به امور و دعاوی خانوادگی، در شعبه‌ی دادگاه خانواده که برای رسیدگی تخصصی به دعاوی مردم تشکیل شده است، حضور قاضی مشاور زن نیز الزامی شده است.\n
        با توجه به این که هسته‌ی اصلی خانواده را زن و مرد تشکیل می‌دهند، لذا در مرحله‌ی رسیدگی و حل و فصل اختلافات نیز حضور نمایندگانی از هر دو جنس می تواند منعکس کننده خواسته های هر دو باشد.\n
        همچنین دادگاه‌های خانواده تأثیرگذارترین مرجع قضایی در نظام حقوقی هستند که قضات زن می‌توانند در آن حضور مؤثر داشته باشند.\n
        چرا که نیمی از مراجعان به این دادگاه‌ها زنان هستند و راحت‌تر می‌توانند مشکلات خود را با قاضی زن مطرح کنند.\n
        پس حضور زنان قاضی در دادگاه خانواده و پس از آن در اداره سرپرستی لازم و ضروری است.\n
    </string>
    <string name="khanevade10">
        شرایط قضات دادگاه خانواده
    </string>
    <string name="khanevade11">
        علاوه بر شرط حضور قاضی مشاور زن و لزوم اظهارنظر او، سایر قضات هم باید متاهل و دارای حداقل چهار سال سابقه خدمت قضایی باشند.\n
        شرط تاهل یکی از شروطی است که وجود آن به درک بیشتر و عمیق تر موضوعات در صلاحیت این دادگاه کمک می کند.\n
    </string>
    <string name="khanevade12">
        مراکز مشاوره خانواده
    </string>
    <string name="khanevade13">
        به منظور تحکیم مبانی خانواده و جلوگیری از افزایش اختلافات خانوادگی و طلاق و سعی در ایجاد صلح و سازش، بر اساس قانون حمایت خانواده، قوه قضاییه مکلف شد ظرف سه سال از تاریخ لازم الاجرا شدن آن قانون، مراکز مشاوره خانواده را در کنار دادگاه های خانواده ایجاد کند.\n
        یکی از مهم‌ترین دستاوردهای این قانون را می توان تشکیل مراکز مشاوره دانست.\n
        این مراکز ابتدا تلاش می‌کنند تا موضوعات به روشی غیر از طرح دعوا در دادگاه حل و فصل شود.\n
        سپس در صورتی که این تلاش به نتیجه منجر نشد، طرح دعوا در دادگاه خانواده صورت می‌گیرد.\n
    </string>
    <string name="khanevade14">
        حمایت های قانونی از افراد بی بضاعت
    </string>
    <string name="khanevade15">
        در ابتدا باید ذکر شود که میان رویه دادگاه حمایت خانواده و سایر دادگاه ها در این موضوع تفاوتی وجود دارد.\n
        در اکثر مجتمع‌های قضایی واحدی به نام واحد ارشاد و معاضدت که هم از وکلا و هم از مراکز مشاوره قوه قضائیه افرادی در آن حضور دارند، همیشه آماده مشاوره دادن به مردم هستند.\n
        از پرسنل خود مجتمع‌ها، آن‌هایی که آشنا به حقوق هستند هم حضور دارند و در نتیجه مراجعین نه تنها در مجتمع خانواده بلکه در همه مجتمع‌های قضایی، واحد معاضدت و ارشاد آنان را راهنمایی می‌کنند.\n
        امّا در قانون حمایت از خانواده پیش بینی شده که اگر طرفینی که به دادگاه مراجعه می‌کنند بضاعت مالی نداشته باشند و دادگاه آن را احراز کند،
        دیگر اصلاً نیازی به اینکه دادخواست اعسار از هزینه دادرسی بدهند نیست.
        همین اندازه که دادگاه احراز کرد، آن‌ها را از پرداخت هزینه‌های دادرسی معاف می‌کند.\n
        این موضوع در ماده ۵ قانون حمایت از خانواده پیش بینی شده که اگر دادگاه احساس کرد آنان نیاز دارند به اینکه وکیل معاضدتی برای آن‌ها وکالت کند،
        آن‌ها را به کانون وکلا یا به مرکز امور مشاوران معرفی می‌کند تا برای این افراد وکیل معاضدتی و مجانی در نظر گرفته شود.\n
    </string>
    <string name="mali1">
        جرائم مالیاتی چیست؟
    </string>
    <string name="mali2">
        در قانون مالیات‎های مستقیم کشور، برای مودیان مالیاتی وظایفی تعیین شده است که باید در موعد قانونی آن را انجام دهند.\n
        برای عدم انجام این وظایف در مهلت قانونی، انجام آن در بعد از مهلت قانونی و یا جلوگیری از انجام آن،
        جریمه‎هایی برای مودیان در نظر گرفته شده که بابد این جرائم را علاوه بر اصل مالیات به سازمان امور مالیاتی پرداخت نمایند.\n
        این جرائم جز مواردی است که هر حسابداری باید اطلاعات کافی در مورد آن داشته باشد.\n
        در اصلاحیه قانون مالیات های مستقیم که در تیر ماه ۱۳۹۴ تصویب شد، برای افراد حقیقی و حقوقی که وظایف قانونی و مالیاتی خود را انجام نمی دهند و یا به روشی جلوی انجام آن را می گیرند اضافه بر جریمه مالیاتی،
        مجازات کیفری و حقوقی هم در نظر گرفته شده است که در ادامه به آن می‎پردازیم.\n
        -موارد مربوط به جرائم مالیاتی از ابتدای سال ۱۳۹۵به عنوان ماده های ۲۷۴ تا ۲۸۲ به قانون مالیات های مستقیم که قبلا دارای ۲۷۳ ماده بود اضافه می شود.\n
    </string>
    <string name="mali3">
        انواع جرائم مالیاتی
    </string>
    <string name="mali4">
        بر اساس ماده ۲۷۴ و ۲۷۹ که در بند ۶۰ اصلاحیه قانون مالیات ها ذکر شده است موارد زیر جرم مالیاتی محسوب می شود و مرتکب یا مرتکبان بر حسب مورد، به مجازات های درجه شش محکوم می گردند (مجازات های درجه شش در پایان مقاله ذکر شده است:)\n

        جرائم مالیاتی ذکر شده در ماده ۲۷۴ قانون مالیات‎های مستقیم:\n

        ۱ـ تنظیم دفاتر، اسناد و مدارک خلاف واقع و استناد به آن\n

        ۲ـ اختفای فعالیت اقتصادی و کتمان درآمد حاصل از آن\n
        ۳ـ ممانعت از دسترسی مأموران مالیاتی به اطلاعات مالیاتی و اقتصادی خود یا اشخاص ثالث در اجرای ماده(۱۸۱) این قانون و امتناع از انجام تکالیف قانونی مبنی بر ارسال اطلاعات مالی موضوع مواد(۱۶۹) و (۱۶۹ مکرر) به سازمان امور مالیاتی کشور و وارد کردن زیان به دولت با این اقدام\n

        ۴ـ عدم انجام تکالیف قانونی مربوط به مالیات های مستقیم و مالیات بر ارزش افزوده در رابطه با وصول یا کسر مالیات مؤدیان دیگر و ایصال آن به سازمان امور مالیاتی در مواعد قانونی تعیین شده\n

        ۵ ـ تنظیم معاملات و قراردادهای خود به نام دیگران، یا معاملات و قراردادهای مؤدیان دیگر به نام خود برخلاف واقع\n

        ۶ ـ خودداری از انجام تکالیف قانونی درخصوص تنظیم و تسلیم اظهارنامه مالیاتی حاوی اطلاعات درآمدی و هزینه ای در سه سال متوالی\n

        ۷ـ استفاده از کارت بازرگانی اشخاص دیگر به منظور فرار مالیاتی\n
    </string>
</resources>