<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:paddingBottom="10dp"
    android:textDirection="rtl">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/img1"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qanomAsasi"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:lineSpacingExtra="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/matn_qanonasasi"
                android:textAlignment="textStart"
                android:textColor="@color/colorSecondaryText"
                android:lineSpacingExtra="10dp"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tarikhche"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matn_tarikhche"
                android:textColor="@color/colorSecondaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:textAlignment="textStart"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qaza_dar_qanon"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matn_qaza_dar_qanon"
                android:textColor="@color/colorSecondaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:textAlignment="textStart"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qove_mojrie"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="5dp"
                android:lineSpacingExtra="10dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matn_qove_mojrie"
                android:textColor="@color/colorSecondaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:textAlignment="textStart"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_namayandegan"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matn_namayandegan"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp"
                android:lineSpacingExtra="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="textStart"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

</FrameLayout>