<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maliati">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        android:paddingBottom="10dp"
        android:textDirection="rtl">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/mali"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mali1"
        android:textColor="@color/colorPrimaryText"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:lineSpacingExtra="10dp"
        android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mali2"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:lineSpacingExtra="10dp"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mali3"
            android:textColor="@color/colorPrimaryText"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:lineSpacingExtra="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mali4"
            android:textAlignment="textStart"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"/>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>



</FrameLayout>